// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitProviderUsername snapshot w/o username 1`] = `
<form
  className="pf-c-form"
  noValidate={true}
>
  <div
    className="pf-c-form__group"
  >
    <div
      className="pf-c-form__group-label"
    >
      <label
        className="pf-c-form__label"
        htmlFor="git-provider-username-label"
      >
        <span
          className="pf-c-form__label-text"
        >
          Git Provider Username
        </span>
        <span
          aria-hidden="true"
          className="pf-c-form__label-required"
        >
           
          *
        </span>
      </label>
       
    </div>
    <div
      className="pf-c-form__group-control"
    >
      <input
        aria-describedby="git-provider-username-label"
        aria-invalid={false}
        aria-label="Git Provider Username"
        className="pf-c-form-control"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter a Git Provider Username"
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
      
    </div>
  </div>
</form>
`;

exports[`GitProviderUsername snapshot with username 1`] = `
<form
  className="pf-c-form"
  noValidate={true}
>
  <div
    className="pf-c-form__group"
  >
    <div
      className="pf-c-form__group-label"
    >
      <label
        className="pf-c-form__label"
        htmlFor="git-provider-username-label"
      >
        <span
          className="pf-c-form__label-text"
        >
          Git Provider Username
        </span>
        <span
          aria-hidden="true"
          className="pf-c-form__label-required"
        >
           
          *
        </span>
      </label>
       
    </div>
    <div
      className="pf-c-form__group-control"
    >
      <input
        aria-describedby="git-provider-username-label"
        aria-invalid={false}
        aria-label="Git Provider Username"
        className="pf-c-form-control"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter a Git Provider Username"
        readOnly={false}
        required={false}
        type="text"
        value="username"
      />
      
    </div>
  </div>
</form>
`;
